navbar overlap problem solved

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,9 +1,10 @@
 
 body {
-	padding-top: 40px;
+	padding-top: 58px;
+	height: 1000px;
 }
 
-#index {
-	height: 400px;
-	background: #DCEAF4;
+@media screen and (max-width:768px) {
+	body { padding-top: 0px; }
 }
+
